Development history / change log, please read from bottom up

Version 3.5.3 - xx yyy 2022
Generic changes/fixes
	* add base directory to Linux start scripts
	* fix a possible error when displaying history graphs calculations with an empty trail record set
	* cleanup senseless log level OFF or change to level INFO
		
Device specific changes/fixes
	* Junsi iChargerUSB - add message box signaling timeout while initializing program memories for dialog
	* Junsi iChargerDX6,S6 - cleanup duplicated BatteryTypesX definition
	* Junsi iChargerDX* - fix partially wrong program memory, PB, Ni* max cells
	* HoTTAdapter*2 - cleanup possible clash AirSpeed Vario, sync update variable Vario/GPS dependencies

Version 3.5.2 - 23 DEC 2021
Generic changes/fixes
	* correct statistic value formating while two triggers are defined
	* correct average calculation while two triggers are defined
	* update jSerialComm to version 2.7.0 to support MAC OS X ARM architecture
	* update formatting GPS coordinates
	* update XSD to enable device based request as byte hex array to be written before reading from serial port
	
Device specific changes/fixes
	* Junsi iChargerUSB - correct energy calculation for continuous recorded data while loading from OSD
	* Junsi DX* - correct input power values
	* Junsi DX* - correct system parameter dialog according updated specification
	* Junsi DX* - add graphics templates
	* Junsi iChargerDuo* - add missing input source power configuration
	* Junsi iCharger* - update help documentation related to DX devices
	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
	* GPS-Logger3 - calculate average pressure ∆TEC for 40 km/h and 70 km/h and average AirSpeed for pressure ∆TEC 1,0 hPa
	* HoTTAdapter2 - update graphics template files to have voltage in blue, current in red, ...
	* OpenTx-Telemetry - correct parsing of GPS tag with coordinates in degree with different decimals